--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Coursera</title>
+</head>
+<body>
+    <h1>Hello world again.</h1>
+</body>
+</html>
